pyjobs_web/pyjobsweb/public/css/style.css
/* TurboGears flash bootstrap look */
#flash > div {
  padding: 8px 35px 8px 14px;
  margin-bottom: 20px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  background-color: #fcf8e3;
  border: 1px solid #fbeed5;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
  color: #c09853;
}

#flash > .ok {
  color: #468847;
  background-color: #dff0d8;
  border-color: #d6e9c6;
}

#flash > .error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

#flash > .info {
  color: #3a87ad;
  background-color: #d9edf7;
  border-color: #bce8f1;
}

/* Footer styling */
.footer {
    margin-top: 45px;
    padding: 35px 30px 36px;
    border-top: 1px solid #e5e5e5;
}

.footer p {
    margin-bottom: 0;
    color: #555;
}

.job-item {

}

.no-job-found {
    margin-top: 21px;
    display: inline-block;
}


.row-even {
    background-color: #FFF;
}

.row-odd {
    background-color: #E7E7E7;
}

.label-pyjob {
    background-color: #ffda4b;
    color: #4989bc;
    font-size: 1.3em;
    font-weight: bold;
    border-bottom: 1px solid #4989bc;
}


.job-cdd { background-color: olive; }
.job-cdi { background-color: green; }
.job-freelance {background-color: orange; }
.job-stage { background-color: yellowgreen; }
.job-remote { background-color: #CCC; }

.page-header {
    border-bottom-width: 0px;
}

.page-header h1 {
    font-weight: bold;
    border-width: 0px;
    font-size: 3em;
    border-bottom-width: 0px;
}

.centered-block {
    display: block;
    margin-left: auto;
    margin-right: auto
}

.job-source-link {
    width: 250px;
    margin-top: 25px;
    clear: both;
}

h1.job {
    margin-top: 0px;
}

#sources article.source h2 a {
    text-decoration: none;
    color: inherit;
}

body {
    padding-top: 40px;
}

body .navbar-brand > img {
    display: inline;
}

body nav.navbar.navbar-default div.navbar-header a.navbar-brand {
    padding: 15px;
}

div.job.row {
    margin-left: -24px;
    margin-right: -24px;
}

div.job.row > div.col-md-12 {
    padding-left: 0px;
    padding-right: 0px;
}

.job-tag {
    line-height: 1.8em;
}

.source .improve {
    margin-top: 3px;
}

.source.human .logo {
    filter: invert(100%);
}

.source .last-crawl-label {
    color: #BBB;
}

.source .last-crawl {
    color: #999;
}

.full-height {
    height: 100%;
}

html.full-height {
    /* Surely be more clean ? */
    padding-bottom: 220px;
}

.full-page {
    width: 100%;
    height: 100%;
}

